new ud giao dien

--- a/WebQuanLyResort/WebQuanLyResort/Views/Home/Index.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
         <hr />
     </div>
     <div class="col-4 " style="text-align: center">
-        <a href="/home/tatcaphong" class="text-decoration-none text-dark" style="font-size: 25px">xem tất cả các loại phòng</a>
+        <a href="/home/tatcaphong" class="text-decoration-none text-gray" style="font-size: 25px">Xem tất cả các loại phòng</a>
     </div>
     <div class="col-4">
         <hr />
