--- a/WebQuanLyResort/WebQuanLyResort/Views/Phong/DatPhongThanhCong.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Phong/DatPhongThanhCong.cshtml
@@ -3,13 +3,14 @@
     ViewBag.Title = "DatPhongThanhCong";
     Layout = "~/Views/Shared/_LayoutPageChiTiet.cshtml";
 }
-
-<div class="container">
-    <div class="booking-success" style="text-align:center">
-        <h1>Booking Successful!</h1>
-        <p>Your room has been successfully booked.</p>
-        <p>Thank you for choosing our service!</p>
-        <a href="/home/index">Back to Homepage</a>
+<div style="padding-top:80px">
+    <div class="container">
+        <div class="booking-success" style="text-align:center">
+            <h1>Đặt phòng thành công</h1>
+            <p>Phòng của bạn đã được đặt thành công.</p>
+            <p>Cảm ơn bạn đã sử dụng phòng!!</p>
+            <a href="/home/index">Trở về trang chủ</a>
+        </div>
     </div>
 </div>
 
