--- a/WebQuanLyResort/WebQuanLyResort/Views/Phong/Index.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Phong/Index.cshtml
@@ -24,139 +24,149 @@
 
     </div>
     <div class="col-4">
-        <form action="/phong/checkout" method="post">
+        @if (Model.trang_thai == "Còn trống")
+        {
+            <form action="/phong/checkout" method="post">
 
 
-            <div class="d-flex justify-content-center">
-                <h1 style="color: #b48428; text-align: center" class="text-uppercase mt-3">@Model.loaiphong.ten_loai</h1>
-                <input class="d-none" type="text" name="idphong" value="@Model.id_phong" />
-                <input class="d-none" type="text" name="tenphong" value="@Model.loaiphong.ten_loai" />
-            </div>
-            <div class="d-flex justify-content-center">
-                <p style="text-align:center">@Model.MoTa</p>
-            </div>
-            <div class="d-flex justify-content-center">
-                <p style="color: #b48428">@Model.loaiphong.gia.ToString("C")</p>
-            </div>
-            <div class="row">
-                @*<div class="d-flex justify-content-center mb-3">
-                    Ngày
-                </div>*@
-                <div class="col-12">
-                    <div class="row mb-3">
-                        <div class="col-6 d-flex flex-column justify-content-center align-items-center">
-                            <label for="dateInput">Ngày đặt phòng</label>
-                            <input class="form-control" type="date" id="dateInput" name="CheckInDate" value="" />
+                <div class="d-flex justify-content-center">
+                    <h1 style="color: #b48428; text-align: center" class="text-uppercase mt-3">@Model.loaiphong.ten_loai</h1>
+                    <input class="d-none" type="text" name="idphong" value="@Model.id_phong" />
+                    <input class="d-none" type="text" name="tenphong" value="@Model.loaiphong.ten_loai" />
+                </div>
+                <div class="d-flex justify-content-center">
+                    <p style="text-align:center">@Model.MoTa</p>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <p style="color: #b48428">@Model.loaiphong.gia.ToString("C")</p>
+                </div>
+                <div class="row">
+                    @*<div class="d-flex justify-content-center mb-3">
+                Ngày
+            </div>*@
+                    <div class="col-12">
+                        <div class="row mb-3">
+                            <div class="col-6 d-flex flex-column justify-content-center align-items-center">
+                                <label for="dateInput">Ngày đặt phòng</label>
+                                <input class="form-control" type="date" id="dateInput" name="CheckInDate" value="" />
 
-                            <script>
-                                document.addEventListener("DOMContentLoaded", function () {
-                                    var today = new Date();
-                                    var dd = String(today.getDate()).padStart(2, '0');
-                                    var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
-                                    var yyyy = today.getFullYear();
+                                <script>
+                                    document.addEventListener("DOMContentLoaded", function () {
+                                        var today = new Date();
+                                        var dd = String(today.getDate()).padStart(2, '0');
+                                        var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+                                        var yyyy = today.getFullYear();
 
-                                    today = yyyy + '-' + mm + '-' + dd;
-                                    document.getElementById("dateInput").value = today;
-                                });
-                            </script>
+                                        today = yyyy + '-' + mm + '-' + dd;
+                                        document.getElementById("dateInput").value = today;
+                                    });
+                                </script>
+                            </div>
+                            <div class="col-6 d-flex flex-column justify-content-center align-items-center">
+                                <label for="dateInput2">Ngày trả phòng</label>
+                                <input class="form-control" type="date" id="dateInput2" name="CheckOutDate" value="" onchange="calculateDateDifference()" />
+                                <script>
+                                    document.addEventListener("DOMContentLoaded", function () {
+                                        var today = new Date();
+                                        var dd = String(today.getDate()).padStart(2, '0');
+                                        var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+                                        var yyyy = today.getFullYear();
+
+                                        today = yyyy + '-' + mm + '-' + dd;
+                                        document.getElementById("dateInput2").min = today;
+                                    });
+
+
+                                </script>
+                                <!-- Phần JavaScript -->
+
+                                <script>
+                      function calculateDateDifference() {
+                          var date1 = document.getElementById("dateInput").value;
+                          var date2 = document.getElementById("dateInput2").value;
+
+                          var diffInMilliseconds = Math.abs(new Date(date2) - new Date(date1));
+                          var diffInDays = Math.ceil(diffInMilliseconds / (1000 * 60 * 60 * 24));
+
+                          var totalPrice = @Model.loaiphong.gia * 0.75 * diffInDays;
+                          var datcoc = @Model.loaiphong.gia * 0.75
+                          document.getElementById("result").innerText = datcoc.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
+                          document.getElementById("datcoc2").innerText = " (đặt cọc 75%)" + " x " + diffInDays + " day";
+                          document.getElementById("tien").innerText = totalPrice.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
+                          document.getElementById("tong").innerText = totalPrice.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
+                          document.getElementById("booking").style.display = "flex";
+
+                          document.getElementById("inputsongayo").value = diffInDays;
+                          document.getElementById("inputdatcoc").value = datcoc;
+                          document.getElementById("inputtongtien").value = totalPrice;
+
+                      }
+                                </script>
+                                <input class="d-none" type="text" name="songayo" id="inputsongayo" value="" />
+                                <input class="d-none" type="text" name="datcoc" id="inputdatcoc" value="" />
+                                <input class="d-none" type="text" name="tongtien" id="inputtongtien" value="" />
+                            </div>
+
+
                         </div>
-                        <div class="col-6 d-flex flex-column justify-content-center align-items-center">
-                            <label for="dateInput2">Ngày trả phòng</label>
-                            <input class="form-control" type="date" id="dateInput2" name="CheckOutDate" value="" onchange="calculateDateDifference()" />
-                            <script>
-                                document.addEventListener("DOMContentLoaded", function () {
-                                    var today = new Date();
-                                    var dd = String(today.getDate()).padStart(2, '0');
-                                    var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
-                                    var yyyy = today.getFullYear();
-
-                                    today = yyyy + '-' + mm + '-' + dd;
-                                    document.getElementById("dateInput2").min = today;
-                                });
-
-
-                            </script>
-                            <!-- Phần JavaScript -->
-
-                            <script>
-                            function calculateDateDifference() {
-                                var date1 = document.getElementById("dateInput").value;
-                                var date2 = document.getElementById("dateInput2").value;
-
-                                var diffInMilliseconds = Math.abs(new Date(date2) - new Date(date1));
-                                var diffInDays = Math.ceil(diffInMilliseconds / (1000 * 60 * 60 * 24));
-
-                                var totalPrice = @Model.loaiphong.gia * 0.75 * diffInDays;
-                                var datcoc = @Model.loaiphong.gia * 0.75
-                                document.getElementById("result").innerText = datcoc.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
-                                document.getElementById("datcoc2").innerText = " (đặt cọc 75%)" + " x " + diffInDays + " day";
-                                document.getElementById("tien").innerText = totalPrice.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
-                                document.getElementById("tong").innerText = totalPrice.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
-                                document.getElementById("booking").style.display = "flex";
-
-                                document.getElementById("inputsongayo").value = diffInDays;
-                                document.getElementById("inputdatcoc").value = datcoc;
-                                document.getElementById("inputtongtien").value = totalPrice;
-
-                            }
-                            </script>
-                            <input class="d-none" type="text" name="songayo" id="inputsongayo" value="" />
-                            <input class="d-none" type="text" name="datcoc" id="inputdatcoc" value="" />
-                            <input class="d-none" type="text" name="tongtien" id="inputtongtien" value="" />
-                        </div>
-
-
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="" style="text-align:center">
-                    <label for="songuoio">Số người ở</label>
+                <div class="row">
+                    <div class="" style="text-align:center">
+                        <label for="songuoio">Số người ở</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row p-3">
-                <input style="text-align: center" type="text" class="form-control" name="songuoio" id="songuoio" value="1" />
-            </div>
-
-            <script>
-            // Lấy giá trị của @Model.so_luong_nguoi từ code Razor và chuyển sang JavaScript
-            var soNguoiO = parseInt('@Model.so_luong_nguoi');
-
-            document.getElementById('songuoio').addEventListener('change', function() {
-                var inputValue = parseInt(this.value);
-
-                if (inputValue > soNguoiO) {
-                    alert('Quy định số người ở phòng này không vượt quá ' + soNguoiO + '. Vui lòng xem mô tả chi tiết.');
-                    this.value = soNguoiO; // Gán lại giá trị là giá trị tối đa cho phép
-                }
-            });
-            </script>
-
-
-            <div class="row" style="display: none" id="booking">
-                <div class="col-md-6">
-                    <span id="result" style="color: #b48428"></span><span id="datcoc2"></span>
+                <div class="row p-3">
+                    <input style="text-align: center" type="text" class="form-control" name="songuoio" id="songuoio" value="1" />
                 </div>
-                <div class="col-md-6  d-flex justify-content-end">
-                    <span id="tien" style="color: #b48428">@(Model.loaiphong.gia * 0.75) * @ViewBag.date</span>
-                </div>
-                <hr />
-                <div class="col-md-6" style="text-align: center">
-                    Total
-                </div>
-                <div class="col-md-6 d-flex justify-content-end">
-                    <span id="tong" style="color: #b48428"></span>
-                </div>
-            </div>
 
-            <div class="d-flex justify-content-center mt-3">
-                <button type="submit" class="btn btn-warning w-100" href="#">Booking</button>
-            </div>
+                <script>
+      // Lấy giá trị của @Model.so_luong_nguoi từ code Razor và chuyển sang JavaScript
+      var soNguoiO = parseInt('@Model.so_luong_nguoi');
 
-        </form>
+      document.getElementById('songuoio').addEventListener('change', function() {
+          var inputValue = parseInt(this.value);
+
+          if (inputValue > soNguoiO) {
+              alert('Quy định số người ở phòng này không vượt quá ' + soNguoiO + '. Vui lòng xem mô tả chi tiết.');
+              this.value = soNguoiO; // Gán lại giá trị là giá trị tối đa cho phép
+          }
+      });
+                </script>
+
+
+                <div class="row" style="display: none" id="booking">
+                    <div class="col-md-6">
+                        <span id="result" style="color: #b48428"></span><span id="datcoc2"></span>
+                    </div>
+                    <div class="col-md-6  d-flex justify-content-end">
+                        <span id="tien" style="color: #b48428">@(Model.loaiphong.gia * 0.75) * @ViewBag.date</span>
+                    </div>
+                    <hr />
+                    <div class="col-md-6" style="text-align: center">
+                        Total
+                    </div>
+                    <div class="col-md-6 d-flex justify-content-end">
+                        <span id="tong" style="color: #b48428"></span>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-center mt-3">
+                    <button type="submit" class="btn btn-warning w-100" href="#">Đặt phòng</button>
+                </div>
+                <br />
+            </form>
+        }
+        else
+        {
+            <h1 style="color: #ff0000; text-align: center" class="text-uppercase mt-3">HẾT PHÒNG</h1>
+            <span>Vui lòng liên hệ SĐT : 0909090975xx để biết thêm chi tiết</span>
+           <br />
+        }
+
     </div>
     <div class="col-4">
-
+       
     </div>
 </div>
 
@@ -227,10 +237,10 @@
 }
 <div style="background-color: #f3f8fa" class="p-3">
     <div class="d-flex justify-content-center">
-        <h2 class="text-success mt-2 mb-3">Các loại phòng khác</h2>
+        <h2 class="text-success mt-2 mb-3">CÁC LOẠI PHÒNG KHÁC</h2>
     </div>
     <div class="d-flex justify-content-center ">
-        <h2 class="text-warning mb-3">Có thể bạn quan tâm</h2>
+        <h2 class="text-warning mb-3">DANH SÁCH PHÒNG MÀ BẠN CÓ THỂ QUAN TÂM</h2>
     </div>
 
     <div class="row">
@@ -249,7 +259,7 @@
                                 <div class="card p-2" style="border-radius: 10px">
                                     <img style="height: 300px; border-radius: 10px" src="~/Image/HinhAnh/@item.HinhAnh.Trim()" alt="Alternate Text" />
                                     <div class="card-body">
-                                        <h3 class="text-success">@item.loaiphong.ten_loai</h3>
+                                        <h4 class="text-success">@item.loaiphong.ten_loai</h4>
                                         <p>@item.loaiphong.gia.ToString("C")</p>
                                         <div class="row">
                                             <div class="col-6">
@@ -275,8 +285,8 @@
                                                 : @item.so_luong_nguoi khách
                                             </div>
                                         </div>
-                                        <a class="btn btn-warning" href="#">BOOKING</a>
-                                        <a class="btn btn-outline-warning" href="/phong/index?id=@item.id_phong">VIEWMORE</a>
+                                        <a class="btn btn-warning" href="#">ĐẶT PHÒNG</a>
+                                        <a class="btn btn-outline-warning" href="/phong/index?id=@item.id_phong">XEM CHI TIẾT</a>
                                     </div>
                                 </div>
                             </div>
