--- a/WebQuanLyResort/WebQuanLyResort/Views/Shared/_Layout.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Shared/_Layout.cshtml
@@ -55,10 +55,10 @@
             </div>
 
             <nav id="navbar" class="navbar">
-                <ul>
-                    <li><a class="active " href="/home/index">Trang chủ</a></li>
-                    <li><a href="/home/tatcaphong">khách sạn</a></li>
-                    <li><a href="services.html">Đặt trước</a></li>
+                <ul class="text-uppercase">
+                    <li ><a class="active " href="/home/index">Trang chủ</a></li>
+                    <li><a href="/home/tatcaphong">Resort</a></li>
+                    <li><a href="#">Đặt trước</a></li>
                     <li><a href="#">Liên hệ</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
