--- a/WebQuanLyResort/WebQuanLyResort/Views/Shared/_LayoutPageChiTiet.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Shared/_LayoutPageChiTiet.cshtml
@@ -67,10 +67,10 @@
             </div>
 
             <nav id="navbar" class="navbar">
-                <ul>
+                <ul class="text-uppercase">
                     <li><a class="active " href="/home/index">Trang chủ</a></li>
-                    <li><a href="/home/tatcaphong">khách sạn</a></li>
-                    <li><a href="/phong/checkout?id=PH_5">Đặt trước</a></li>
+                    <li><a href="/home/tatcaphong">resort</a></li>
+                    <li><a href="#">Đặt trước</a></li>
                     <li><a href="#">Liên hệ</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
