--- a/WebQuanLyResort/WebQuanLyResort/Views/Phong/DatPhongThanhCong.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Phong/DatPhongThanhCong.cshtml
@@ -5,7 +5,7 @@
 }
 <div style="padding-top:80px">
     <div class="container">
-        <div class="booking-success" style="text-align:center">
+        <div class="booking-success mt-5" style="text-align:center">
             <h1>Đặt phòng thành công</h1>
             <p>Phòng của bạn đã được đặt thành công.</p>
             <p>Cảm ơn bạn đã sử dụng phòng!!</p>
